[package]
name = "jpkernel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core ARM stuff
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.2"

# RP2040 HAL
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

# Allocator for dynamic memory
embedded-alloc = "0.5"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}

# Debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

# USB for serial output
usb-device = "0.3"
usbd-serial = "0.2"
rtt-target = "0.6.2"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[target.'cfg( target_arch = "riscv32" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-riscv32", "executor-thread"]}

